--- a/style.css
+++ b/style.css
@@ -41,9 +41,48 @@ form > button {
   background-color: rgb(49, 180, 49);
   color: white;
   cursor: pointer;
-  transition: background-color .3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
 }
 
 form > button:hover {
   background-color: rgb(1, 160, 1);
+}
+
+.search-results {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  justify-content: space-between;
+  max-width: 1200px;
+}
+
+.search-result {
+  width: 30%;
+  /* box-sizing: border-box; */
+  box-shadow: 0 0 2px black;
+  border-radius: 5px;
+  margin-bottom: 50px;
+  overflow: hidden;
+}
+
+.search-result > img {
+  height: 200px;
+  width: 100%;
+  transition: transform 0.3s ease-in-out;
+}
+
+.search-result > img:hover {
+  transform: scale(1.05);
+}
+
+.search-result > a {
+  display: block;
+  padding: 15px;
+  text-decoration: none;
+  color: #333;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.search-result > a:hover {
+  background-color: rgb(230, 229, 229);
 }
