--- a/style.css
+++ b/style.css
@@ -86,3 +86,20 @@ form > button:hover {
 .search-result > a:hover {
   background-color: rgb(230, 229, 229);
 }
+
+section + button {
+  background-color: rgb(84, 84, 221);
+  font-size: 18px;
+  display: block;
+  margin: 20px auto;
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  border: none;
+  transition: background-color .2s ease-in-out;
+}
+
+section + button:hover {
+  background-color: rgb(30, 30, 141);
+}
