--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ form > button:hover {
   flex-wrap: wrap;
   margin: 0 auto;
   justify-content: space-between;
-  max-width: 1200px;
+  max-width: 1300px;
 }
 
 .search-result {
@@ -61,7 +61,7 @@ form > button:hover {
   /* box-sizing: border-box; */
   box-shadow: 0 0 2px black;
   border-radius: 5px;
-  margin-bottom: 50px;
+  margin: 0 10px 50px 10px;
   overflow: hidden;
 }
 
@@ -102,4 +102,12 @@ section + button {
 
 section + button:hover {
   background-color: rgb(30, 30, 141);
+}
+
+
+@media screen and (max-width: 768px) {
+  .search-result {
+    width: 45%;
+    margin: 0 15px 50px 15px;
+  }
 }
