--- a/style.css
+++ b/style.css
@@ -34,7 +34,6 @@ form > input {
 form > button {
   font-size: 18px;
   padding: 10px 10px;
-  width: 10%;
   max-width: 100px;
   border-radius: 5px;
   border: none;
@@ -54,6 +53,7 @@ form > button:hover {
   margin: 0 auto;
   justify-content: space-between;
   max-width: 1300px;
+  padding: 20px;
 }
 
 .search-result {
@@ -61,7 +61,7 @@ form > button:hover {
   /* box-sizing: border-box; */
   box-shadow: 0 0 2px black;
   border-radius: 5px;
-  margin: 0 10px 50px 10px;
+  margin-bottom: 50px;
   overflow: hidden;
 }
 
@@ -108,6 +108,21 @@ section + button:hover {
 @media screen and (max-width: 768px) {
   .search-result {
     width: 45%;
-    margin: 0 15px 50px 15px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .search-result {
+    width: 100%;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+  }
+
+  form > input {
+    width: 80%;
+    margin-bottom: 20px;
   }
 }
